Added an "about the founder section"

--- a/indexpage.html
+++ b/indexpage.html
@@ -274,6 +274,49 @@ if (x.className === "topnav") {
 </div>
 </section>
 
+<section id="section1">
+  <div id="section1-content">
+    <div class="rope">
+    <img src="img\1 (9).jpg" alt="" id="rope">
+    </div>
+    <div class="h1andp">
+      <h1 class="section1-text" >Lorem ipsum dolor sit amet</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <button onclick="topFunction()" id="myBtn" title="Go to top">&#10148;</button>
 <script src="js/bck2top.js"></script>
 
