--- a/indexpage.html
+++ b/indexpage.html
@@ -303,7 +303,7 @@ if (x.className === "topnav") {
         <div class="service-icon">
           <i class="fas fa-paint-brush"></i>
         </div>
-        <div class="service-title">Web Designs</div>
+        <div class="service-title">Lorem ipsum</div>
         <div class="service-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
         </div>
@@ -313,7 +313,7 @@ if (x.className === "topnav") {
         <div class="service-icon">
           <i class="fas fa-code"></i>
         </div>
-        <div class="service-title">Web Development</div>
+        <div class="service-title">Lorem ipsum</div>
         <div class="service-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
         </div>
@@ -323,7 +323,7 @@ if (x.className === "topnav") {
         <div class="service-icon">
           <i class="fas fa-brush"></i>
         </div>
-        <div class="service-title">Responsive Designs</div>
+        <div class="service-title">Lorem ipsum</div>
         <div class="service-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
         </div>
@@ -333,7 +333,7 @@ if (x.className === "topnav") {
         <div class="service-icon">
           <i class="fas fa-object-ungroup"></i>
         </div>
-        <div class="service-title">Edit Sections</div>
+        <div class="service-title">Lorem ipsum</div>
         <div class="service-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
         </div>
@@ -343,7 +343,7 @@ if (x.className === "topnav") {
         <div class="service-icon">
           <i class="fas fa-database"></i>
         </div>
-        <div class="service-title">Databases</div>
+        <div class="service-title">Lorem ipsum</div>
         <div class="service-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
         </div>
@@ -353,7 +353,7 @@ if (x.className === "topnav") {
         <div class="service-icon">
           <i class="fab fa-android"></i>
         </div>
-        <div class="service-title">Android</div>
+        <div class="service-title">Lorem ipsum</div>
         <div class="service-desc">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
         </div>
