--- a/countries/country.html
+++ b/countries/country.html
@@ -33,6 +33,7 @@
 
 	</head>
 	<body>
+		<img class="logo" src="images/thelogo.jpg" alt="">
 	<div class="fh5co-loader"></div>
 	<div id="page">
 	<aside id="fh5co-hero">
@@ -411,7 +412,7 @@
 	<script>
     var d = new Date(new Date().getTime() + 1000 * 120 * 120 * 2000);
 
-    
+
     simplyCountdown('.simply-countdown-one', {
         year: d.getFullYear(),
         month: d.getMonth() + 1,
