--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
-
+<link rel="stylesheet" href="css/style.css">
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/style.css">
@@ -224,6 +224,78 @@
     </div>
   </div>
 </div>
+
+<!-- Services part-->
+<div class="services-section">
+  <div class="inner-width">
+    <h1 class="section-title">Our Services</h1>
+    <div class="border"></div>
+    <div class="services-container">
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-paint-brush"></i>
+        </div>
+        <div class="service-title">Lorem ipsum</div>
+        <div class="service-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-code"></i>
+        </div>
+        <div class="service-title">Lorem ipsum</div>
+        <div class="service-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-brush"></i>
+        </div>
+        <div class="service-title">Lorem ipsum</div>
+        <div class="service-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-object-ungroup"></i>
+        </div>
+        <div class="service-title">Lorem ipsum</div>
+        <div class="service-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fas fa-database"></i>
+        </div>
+        <div class="service-title">Lorem ipsum</div>
+        <div class="service-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+        </div>
+      </div>
+
+      <div class="service-box">
+        <div class="service-icon">
+          <i class="fab fa-android"></i>
+        </div>
+        <div class="service-title">Lorem ipsum</div>
+        <div class="service-desc">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et eaque ratione rem porro, nihil.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <!-- Contact Section -->
 <div id="contact" class="text-center">
   <div class="social">
