--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="menu-section">
-          <h2 class="menu-section-title">China</h2>
+          <h2 class="menu-section-title">Malaysia</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
             <br><br>
-            <a href="countries/country.html"> <h5>Learn more</h5> </a>
+            <a href="countries/malaysia.html"> <h5>Learn more</h5> </a>
           </div>
           <div class="menu-item">
             <div class="menu-item-description"></div>
@@ -105,10 +105,63 @@
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="menu-section">
+          <h2 class="menu-section-title">Taiwan</h2>
+          <div class="menu-item">
+            <div class="menu-item-name">Lorem Ipsum</div>
+            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/taiwan.html"> <h5>Learn more</h5> </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        <div class="menu-section">
+          <h2 class="menu-section-title">Indonesia</h2>
+          <div class="menu-item">
+            <div class="menu-item-name">Lorem Ipsum</div>
+            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/indonesia.html"> <h5>Learn more</h5> </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="menu-section">
+          <h2 class="menu-section-title">China</h2>
+          <div class="menu-item">
+            <div class="menu-item-name">Lorem Ipsum</div>
+            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/china.html"> <h5>Learn more</h5> </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        <div class="menu-section">
           <h2 class="menu-section-title">Japan</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/japan.html"> <h5>Learn more</h5> </a>
+          </div>
+          <div class="menu-item">
+            <div class="menu-item-description"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="menu-section">
+          <h2 class="menu-section-title">South Korea</h2>
+          <div class="menu-item">
+            <div class="menu-item-name">Lorem Ipsum</div>
+            <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/korea.html"> <h5>Learn more</h5> </a>
           </div>
         </div>
       </div>
@@ -116,19 +169,26 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="menu-section">
-          <h2 class="menu-section-title">Morocco</h2>
+          <h2 class="menu-section-title">Cambodia</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/cambodia.html"> <h5>Learn more</h5> </a>
+          </div>
+          <div class="menu-item">
+            <div class="menu-item-description"></div>
           </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="menu-section">
-          <h2 class="menu-section-title">Zimbabwe</h2>
+          <h2 class="menu-section-title">Vietnam</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/vietnam.html"> <h5>Learn more</h5> </a>
           </div>
         </div>
       </div>
@@ -136,19 +196,23 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="menu-section">
-          <h2 class="menu-section-title">France</h2>
+          <h2 class="menu-section-title">Philippines</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/philipinnes.html"> <h5>Learn more</h5> </a>
           </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="menu-section">
-          <h2 class="menu-section-title">Wadiya</h2>
+          <h2 class="menu-section-title">Thailand</h2>
           <div class="menu-item">
             <div class="menu-item-name">Lorem Ipsum</div>
             <div class="menu-item-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, duis sed dapibus leo nec ornare diam. </div>
+            <br><br>
+            <a href="countries/thailand.html"> <h5>Learn more</h5> </a>
           </div>
         </div>
       </div>
