Adjusted the barzzzzz

--- a/countries/china.html
+++ b/countries/china.html
@@ -85,62 +85,6 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-course">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Available Universities</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-1.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Wadiya University </a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-2.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Yella Habibi</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-3.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Supreme University</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 animate-box">
-					<div class="course">
-						<a href="#" class="course-img" style="background-image: url(images/project-4.jpg);">
-						</a>
-						<div class="desc">
-							<h3><a href="#">Nadal University</a></h3>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-							<span><a href="#" class="btn btn-primary btn-sm btn-course">Apply Now!!!</a></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 
 
@@ -149,8 +93,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Calender &amp; Semester times</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Why Come to China</h2>
+					<p>China is one of the world’s most popular non-Anglophone study destinations, with 377,000 international students enrolled in 2014. A huge contender in trade, tourism and education, China has one of the largest and strongest higher education systems in the world, positioned eighth in the system strength rankings. As one of the largest destinations in the world, with a 5,000-year history, China also offers a plethora of tourist destinations and both ancient and modern culture to explore outside of your studies. Both capital city Beijing and Shanghai were ranked among the world’s best student cities in 2018, home to some of Asia’s most respected universities. A total of 113 Chinese universities are featured in the Asian rankings, with Tsinghua University leading the way for China at joint third, up from sixth last year.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -159,7 +103,7 @@
 						<div class="pricing__item">
 							<div class="wrap-price">
 								 <!-- <div class="icon icon-user2"></div> -->
-	                     <h3 class="pricing__title">Fall Intake</h3>
+	                     <h3 class="pricing__title">March Intake</h3>
 	                     <!-- <p class="pricing__sentence">Single user license</p> -->
 							</div>
                      <div class="pricing__price">
@@ -174,20 +118,21 @@
                      	<ul class="pricing__feature-list">
 	                        <li class="pricing__feature">Starts</li>
 	                        <li class="pricing__feature">Ends</li>
-	                        <li class="pricing__feature">Agent fee</li>
-	                        <li class="pricing__feature">Includes</li>
-	                        <li class="pricing__feature">WE also</li>
-	                        <li class="pricing__feature">Bannanana</li>
-	                         <li class="pricing__feature">Peaches and cream</li>
+	                        <li class="pricing__feature">English</li>
+	                        <li class="pricing__feature">Chinese</li>
+	                        <li class="pricing__feature">Language year</li>
+	                        <li class="pricing__feature">Bachelors</li>
+							 <li class="pricing__feature">PhD</li>
+							 <li class="pricing__feature">Cultural Visit</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                   </div>
 					</div>
+					
 					<div class="col-md-4 animate-box">
-						<div class="pricing__item">
-							<div class="wrap-price">
-	                     <h3 class="pricing__title">Autumn Intake</h3>
+                  <div class="pricing__item">
+                  	<div class="wrap-price">
+	                     <h3 class="pricing__title">September Intake</h3>
 							</div>
                      <div class="pricing__price">
                         <span class="pricing__anim pricing__anim--1">
@@ -207,34 +152,6 @@
 	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
 	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
 	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
-                     </div>
-                 </div>
-					</div>
-					<div class="col-md-4 animate-box">
-                  <div class="pricing__item">
-                  	<div class="wrap-price">
-	                     <h3 class="pricing__title">Others</h3>
-							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency"></span>
-                        </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period"> <h2>All Year</h2> </span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                        <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                         <li class="pricing__feature">Lorem ipsum dolor sit amet.</li>
-	                     </ul>
-	                     <button class="pricing__action">Apply Now!!!</button>
                      </div>
                   </div>
                </div>
