--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
 
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
@@ -179,10 +181,19 @@
       <div class="col-xs-12 col-md-3 col-md-offset-1">
         <div class="about-text">
           <div class="section-title">
+            <h2>Why us?</h2>
+          </div>
+          
+          <p>Because we are the best at what we do, Because we don't give you a half services
+          and leave you to hustle. We want to serve you. </p>
+          <div class="section-title">
             <h2>About</h2>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare.</p>
+          <p>We are small group of students like you and your kids, who live in Asia.
+          We suffered high service changes, low quality service and most importantly
+          incomplete service. Never would we subject our clients to the same conditions we were
+          put through. That is our prime motivation.
+         </p>
         </div>
       </div>
     </div>
